# sentinel-mesh

./: .env.example  .gitignore  CI_TEST_RESULTS.md  LICENSE  Makefile  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
attacks/: README.md  admin_probing.py  bruteforce_login.py  invalid_token_burst.py  pyproject.toml
nginx/: nginx.conf
services/api/: Dockerfile  TEST_SUMMARY.md  pyproject.toml
services/api/app/: auth.py  keys.py  log_client.py  main.py  settings.py
services/api/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_keys.py
services/auth/: Dockerfile  TESTS_COMPLETE.md  TEST_SUMMARY.md  pyproject.toml
services/auth/app/: db.py  keys.py  log_client.py  main.py  models.py  schemas.py  security.py  settings.py
services/auth/tests/: README.md  __init__.py  conftest.py  test_api.py  test_keys.py  test_models.py  test_schemas.py  test_security.py
services/log/: Dockerfile  TEST_SUMMARY.md  pyproject.toml
services/log/app/: db.py  main.py  models.py  schemas.py  settings.py
services/log/app/detections/: admin_probing.py  brute_force.py  engine.py  token_abuse.py
services/log/tests/: README.md  __init__.py  conftest.py  test_admin_probing.py  test_api.py  test_brute_force.py  test_integration.py  test_token_abuse.py
web/: alerts.css  alerts.html  app.js  dashboard.html  index.html  login.html  signup.html  styles.css
