[tool.poetry]
name = "sentinel-attacks"
version = "0.1.0"
description = "Attack simulation scripts for SentinelMesh"
authors = ["Yigit Yumus <yigityumus@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
