[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "SentinelMesh authentication service"
authors = ["Yigit Yumus <yigityumus@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
sqlalchemy = "^2.0.0"
pydantic-settings = "^2.0.0"
argon2-cffi = "^23.1.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
email-validator = "^2.3.0"
psycopg = {extras = ["binary"], version = "^3.3.3"}
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.4.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
